--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.1.7",
+    "@iconify/react": "^5.0.2",
     "next": "15.0.1",
     "react": "18",
     "react-dom": "18"
